tests/ui/lifetimes/elided-lifetime-in-path-details.tied.stderr
error: hidden lifetime parameters in types are deprecated
  --> $DIR/elided-lifetime-in-path-details.rs:12:5
   |
LL |     ContainsLifetime
   |     ^^^^^^^^^^^^^^^^ expected lifetime parameter
   |
note: the lint level is defined here
  --> $DIR/elided-lifetime-in-path-details.rs:3:24
   |
LL | #![cfg_attr(tied, deny(tied_lifetimes_hidden_in_paths))]
   |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: indicate the anonymous lifetime
   |
LL |     ContainsLifetime<'_>
   |                     ++++

error: hidden lifetime parameters in types are deprecated
  --> $DIR/elided-lifetime-in-path-details.rs:19:8
   |
LL |     v: ContainsLifetime,
   |        ^^^^^^^^^^^^^^^^ expected lifetime parameter
   |
help: indicate the anonymous lifetime
   |
LL |     v: ContainsLifetime<'_>,
   |                        ++++

error: hidden lifetime parameters in types are deprecated
  --> $DIR/elided-lifetime-in-path-details.rs:27:8
   |
LL |     v: ContainsLifetime,
   |        ^^^^^^^^^^^^^^^^ expected lifetime parameter
   |
help: indicate the anonymous lifetime
   |
LL |     v: ContainsLifetime<'_>,
   |                        ++++

error: hidden lifetime parameters in types are deprecated
  --> $DIR/elided-lifetime-in-path-details.rs:29:6
   |
LL | ) -> ContainsLifetime
   |      ^^^^^^^^^^^^^^^^ expected lifetime parameter
   |
help: indicate the anonymous lifetime
   |
LL | ) -> ContainsLifetime<'_>
   |                      ++++

error: hidden lifetime parameters in types are deprecated
  --> $DIR/elided-lifetime-in-path-details.rs:43:5
   |
LL |     ContainsLifetime
   |     ^^^^^^^^^^^^^^^^ expected lifetime parameter
   |
help: indicate the anonymous lifetime
   |
LL |     ContainsLifetime<'_>
   |                     ++++

error: hidden lifetime parameters in types are deprecated
  --> $DIR/elided-lifetime-in-path-details.rs:105:5
   |
LL |     ContainsLifetime,
   |     ^^^^^^^^^^^^^^^^ expected lifetime parameter
   |
help: indicate the anonymous lifetime
   |
LL |     ContainsLifetime<'_>,
   |                     ++++

error: hidden lifetime parameters in types are deprecated
  --> $DIR/elided-lifetime-in-path-details.rs:107:5
   |
LL |     ContainsLifetime,
   |     ^^^^^^^^^^^^^^^^ expected lifetime parameter
   |
help: indicate the anonymous lifetime
   |
LL |     ContainsLifetime<'_>,
   |                     ++++

error: hidden lifetime parameters in types are deprecated
  --> $DIR/elided-lifetime-in-path-details.rs:120:9
   |
LL |         ContainsLifetime
   |         ^^^^^^^^^^^^^^^^ expected lifetime parameter
   |
help: indicate the anonymous lifetime
   |
LL |         ContainsLifetime<'_>
   |                         ++++

error: hidden lifetime parameters in types are deprecated
  --> $DIR/elided-lifetime-in-path-details.rs:127:12
   |
LL |         v: ContainsLifetime,
   |            ^^^^^^^^^^^^^^^^ expected lifetime parameter
   |
help: indicate the anonymous lifetime
   |
LL |         v: ContainsLifetime<'_>,
   |                            ++++

error: hidden lifetime parameters in types are deprecated
  --> $DIR/elided-lifetime-in-path-details.rs:135:12
   |
LL |         v: ContainsLifetime,
   |            ^^^^^^^^^^^^^^^^ expected lifetime parameter
   |
help: indicate the anonymous lifetime
   |
LL |         v: ContainsLifetime<'_>,
   |                            ++++

error: hidden lifetime parameters in types are deprecated
  --> $DIR/elided-lifetime-in-path-details.rs:137:10
   |
LL |     ) -> ContainsLifetime
   |          ^^^^^^^^^^^^^^^^ expected lifetime parameter
   |
help: indicate the anonymous lifetime
   |
LL |     ) -> ContainsLifetime<'_>
   |                          ++++

error: hidden lifetime parameters in types are deprecated
  --> $DIR/elided-lifetime-in-path-details.rs:148:9
   |
LL |         ContainsLifetime
   |         ^^^^^^^^^^^^^^^^ expected lifetime parameter
   |
help: indicate the anonymous lifetime
   |
LL |         ContainsLifetime<'_>
   |                         ++++

error: hidden lifetime parameters in types are deprecated
  --> $DIR/elided-lifetime-in-path-details.rs:155:9
   |
LL |         ContainsLifetime
   |         ^^^^^^^^^^^^^^^^ expected lifetime parameter
   |
help: indicate the anonymous lifetime
   |
LL |         ContainsLifetime<'_>
   |                         ++++

error: hidden lifetime parameters in types are deprecated
  --> $DIR/elided-lifetime-in-path-details.rs:165:10
   |
LL |     ) -> ContainsLifetime
   |          ^^^^^^^^^^^^^^^^ expected lifetime parameter
   |
help: indicate the anonymous lifetime
   |
LL |     ) -> ContainsLifetime<'_>
   |                          ++++

error: aborting due to 14 previous errors

